Enhance canvas resizing in EnvironmentComponent to account for stroke weight, preventing clipping issues

--- a/webapp/ml-navigation/src/environment/environment.css
+++ b/webapp/ml-navigation/src/environment/environment.css
@@ -1,3 +1,7 @@
 #canvasContainer {
   display: block;
 }
+
+#canvasContainer canvas {
+  display: block;
+}
